--- a/Award Fee/src/Forms & UI/UI Pages/awards/awards.html.html
+++ b/Award Fee/src/Forms & UI/UI Pages/awards/awards.html.html
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <j:jelly trim="false" xmlns:j="jelly:core" xmlns:g="glide" xmlns:j2="null" xmlns:g2="null">
+	<link href="45b38ff2dbd01010629a5385ca9619a5.cssdbx" rel="stylesheet" type="text/css" />
 	<h1>Awards Page</h1>
+	<app-root></app-root>
+
 	<script src="x_398178_award_fee.getCurrentUser.jsdbx"></script>
 </j:jelly>
