--- a/Award Fee/src/Forms & UI/UI Pages/awards/awards.html.html
+++ b/Award Fee/src/Forms & UI/UI Pages/awards/awards.html.html
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <j:jelly trim="false" xmlns:j="jelly:core" xmlns:g="glide" xmlns:j2="null" xmlns:g2="null">
-	<link href="45b38ff2dbd01010629a5385ca9619a5.cssdbx" rel="stylesheet" type="text/css" />
+	<link href="13784fb6dbd01010629a5385ca96194a.cssdbx" rel="stylesheet" type="text/css" />
 	<h1>Awards Page</h1>
 	<app-root></app-root>
 
 	<script src="x_398178_award_fee.getCurrentUser.jsdbx"></script>
+	<script src="x_398178_award_fee.runtime-es2015.jsdbx" type="module"></script>
+	<script src="x_398178_award_fee.runtime-es5.jsdbx" nomodule defer></script>
+	<script src="x_398178_award_fee.polyfills-es5.jsdbx" nomodule defer></script>
+	<script src="x_398178_award_fee.polyfills-es2015.jsdbx" type="module"></script>
+	<script src="x_398178_award_fee.main-es2015.jsdbx" type="module"></script>
+	<script src="x_398178_award_fee.main-es5.jsdbx" nomodule defer></script>
 </j:jelly>
