--- a/Award Fee/src/Forms & UI/UI Pages/awards/awards.html.html
+++ b/Award Fee/src/Forms & UI/UI Pages/awards/awards.html.html
@@ -6,9 +6,9 @@
 
 	<script src="x_398178_award_fee.getCurrentUser.jsdbx"></script>
 	<script src="x_398178_award_fee.runtime-es2015.jsdbx" type="module"></script>
-	<script src="x_398178_award_fee.runtime-es5.jsdbx" nomodule defer></script>
-	<script src="x_398178_award_fee.polyfills-es5.jsdbx" nomodule defer></script>
+	<script src="x_398178_award_fee.runtime-es5.jsdbx" ></script>
+	<script src="x_398178_award_fee.polyfills-es5.jsdbx" ></script>
 	<script src="x_398178_award_fee.polyfills-es2015.jsdbx" type="module"></script>
 	<script src="x_398178_award_fee.main-es2015.jsdbx" type="module"></script>
-	<script src="x_398178_award_fee.main-es5.jsdbx" nomodule defer></script>
+	<script src="x_398178_award_fee.main-es5.jsdbx" ></script>
 </j:jelly>
